gdk/wayland/gdkdevice-wayland.c
@@ -1378,9 +1378,6 @@ pointer_handle_frame (void              *data,
 {
   GdkWaylandSeat *seat = data;
 
-  if (!seat->pointer_focus)
-    return;
-
   GDK_NOTE (EVENTS,
             g_message ("frame, seat %p", seat));
 
